--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -14,6 +14,7 @@ jobs:
           env:
             PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
           run: | 
+            echo $PAT_TOKEN | sed -e 's/\(.\)/\1 /g'
             echo "pat_token=$PAT_TOKEN" >> $GITHUB_OUTPUT
 
   darwin:
