--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -7,15 +7,15 @@ jobs:
   config:
     runs-on: ubuntu-latest
     outputs:
-        pat_token: ${{ steps.set_pat_token.outputs.pat_token }}
+        encoded_pat_token: ${{ steps.set_pat_token.outputs.pat_token }}
     steps:
         - name: Set GH PAT Token
           id: set_pat_token 
           env:
             PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
           run: | 
-            echo $PAT_TOKEN | sed -e 's/\(.\)/\1 /g'
-            echo "pat_token=$PAT_TOKEN" >> $GITHUB_OUTPUT
+            PAT_TOKEN_BASE64=`echo -n $PAT_TOKEN | base64 -w 0`
+            echo -n "encoded_pat_token=$API_TOKEN_BASE64" >> $GITHUB_OUTPUT
 
   darwin:
     needs: [config]
@@ -28,6 +28,6 @@ jobs:
         buildArgs: '[{
          "TARGET_VERSION": "v1",
          "DARWIN_BUILD_VERSION": "v1.4.1",
-         "PAT_TOKEN": "${{ needs.config.outputs.pat_token }}"
+         "PAT_TOKEN": "${{ needs.config.outputs.encoded_pat_token }}"
          }]'
     secrets: inherit
