ncpus update for hades

--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -9,10 +9,11 @@ jobs:
     with:
         imageName: datascience-jupyter-omop
         platforms: '[ "amd64" ]'
-        targets: '[ "darwin" ]'
+        targets: '[ "darwin", "hades" ]'
         buildArgs: '[{
             "TARGET_VERSION": "v1",
-            "DARWIN_BUILD_VERSION": "v1.4.0"
+            "DARWIN_BUILD_VERSION": "v1.4.0",
+            "HADES_BUILD_VERSION": "v1.15.0"
          }]'
         runnerType: 8x-linux-x64
     secrets: inherit
