--- a/.github/workflows/image-variants-manifest.yaml
+++ b/.github/workflows/image-variants-manifest.yaml
@@ -15,6 +15,6 @@ jobs:
             "DARWIN_BUILD_VERSION": "v1.4.0",
             "HADES_BUILD_VERSION": "v1.15.0"
          }]'
-        runnerType: 8x-linux-x64
+        # runnerType: 8x-linux-x64
         directory: docker/datascience-jupyter-omop
     secrets: inherit
